--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ffmpeg-remove-audio",
   "version": "1.0.0",
+  "description": "API to remove audio from video using FFmpeg",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.5",
     "fluent-ffmpeg": "^2.1.2",
-    "ffmpeg-static": "^4.4.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "ffmpeg-static": "^4.4.0",
+    "cors": "^2.8.5"
   }
 }
